attempted sidebar overlap fix

--- a/optiroute/src/Components/Home/Home.css
+++ b/optiroute/src/Components/Home/Home.css
@@ -1,3 +1,30 @@
+.home-container {
+    display: flex;
+    flex-direction: row;
+    background-color: #fff;
+}
+
+.main-content {
+    flex-grow: 1;
+    margin-left: 200px; /* Adjust based on the sidebar width */
+    padding: 1rem;
+}
+
+@media (max-width: 800px) {
+    .home-container {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+    }
+
+    .main-content {
+        margin-left: 0;
+        width: 100%;
+    }
+}
+
 .container{
     display: flex;
     flex-direction: column;
