--- a/optiroute/src/Components/Sidebar/Sidebar.css
+++ b/optiroute/src/Components/Sidebar/Sidebar.css
@@ -1,19 +1,30 @@
+.app-container {
+    display: flex;
+    flex-direction: row;
+}
+
 .sidebar {
-    width: 20vw;
+    position: fixed;
+    width: 250px;
+    height: 100vh;
     max-width: 250px;
     padding: 1rem;
     background-color: #3E5346;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    flex: 1;
+}
+
+.main-content {
+    flex-grow: 1; /* This allows the main content area to fill the remaining space */
+    padding: 1rem; /* Add padding for some spacing around the content */
 }
 
 @media (max-width: 800px) {
     .sidebar {
-        width: 40vw;
-        padding: 0.5rem;  /* Adjust padding for smaller screens */
-        /* Add other adjustments as necessary */
+        width: 100%; /* Full width for smaller screens */
+        height: auto; /* Adjust height for smaller screens */
+        order: -1;
     }
 }
 
